Allow notify numbers per watcher, add watcher hash to redis key

--- a/config.json.example
+++ b/config.json.example
@@ -12,6 +12,7 @@
       "from": "ETH",
       "to": "USD",
       "condition": "result.price < 220",
+      "notify_numbers": ["+17071231234"],
       "check_interval": null, // In minutes, overrides main check_interval
       "notify_interval": null, // In minutes, overrides main notify_interval
       "defer_first": false
