Handle more currencies, add precision setting

--- a/config.json.example
+++ b/config.json.example
@@ -17,7 +17,8 @@
       "notify_numbers": ["+17071231234"],
       "check_interval": null, // In minutes, overrides main check_interval
       "notify_interval": null, // In minutes, overrides main notify_interval
-      "defer_first": false
+      "defer_first": false,
+      "precision": 4 // Decimal places, default 2
     }
   ]
 }
